# toq-plugins

./: .gitignore  README.md
.github/workflows/: ci.yml
_common/: pyproject.toml
_common/tests/: test_binary.py  test_daemon.py  test_setup.py
_common/toq_common/: __init__.py  binary.py  daemon.py  setup.py
_common/toq_plugins_common/: __init__.py  binary.py  daemon.py  setup.py
crewai/: pyproject.toml
crewai/src/toq_crewai/: __init__.py  listener.py  tools.py
crewai/tests/: test_listener.py  test_tools.py
langchain/: pyproject.toml
langchain/src/toq_langchain/: __init__.py  listener.py  tools.py
langchain/tests/: test_listener.py  test_tools.py
