[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toq-crewai"
version = "0.1.0"
description = "toq protocol plugin for CrewAI"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "toq>=0.1.0",
    "toq-plugins-common>=0.1.0.dev1",
    "crewai>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toq_crewai"]
